--- a/Answer.ipynb
+++ b/Answer.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 153,
    "id": "c5624e07-632a-4634-b918-7b1bc07e00e2",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
     "import numpy as np\n",
     "import matplotlib \n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n"
+    "import seaborn as sns"
    ]
   },
   {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 154,
    "id": "7da1a5be-a298-43eb-a0a6-c61720a5aeba",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
        "9      sales     low  "
       ]
      },
-     "execution_count": 375,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 155,
    "id": "23f914fe",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 156,
    "id": "03436fab",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 157,
    "id": "308448b6",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
        " 'salary']"
       ]
      },
-     "execution_count": 378,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 158,
    "id": "a034c259",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 159,
    "id": "ba5eda59",
    "metadata": {},
    "outputs": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 160,
    "id": "013824c6",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 161,
    "id": "652fffea",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 162,
    "id": "6be884c7",
    "metadata": {},
    "outputs": [
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 163,
    "id": "46db9a9f",
    "metadata": {},
    "outputs": [
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 164,
    "id": "a7a0b009",
    "metadata": {},
    "outputs": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 165,
    "id": "1b310643",
    "metadata": {},
    "outputs": [
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 166,
    "id": "40a625d3",
    "metadata": {},
    "outputs": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 167,
    "id": "f781f79e",
    "metadata": {},
    "outputs": [
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 168,
    "id": "a67ddebb",
    "metadata": {},
    "outputs": [
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 169,
    "id": "242c3dbd",
    "metadata": {},
    "outputs": [
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 170,
    "id": "23d15569",
    "metadata": {},
    "outputs": [
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 171,
    "id": "37463d44",
    "metadata": {},
    "outputs": [
@@ -842,16 +842,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of missing values of salary: 0\n",
-      "The number of missing values of salary: 0\n",
-      "The number of missing values of salary: 0\n",
-      "The number of missing values of salary: 368\n",
-      "The number of missing values of salary: 150\n",
-      "The number of missing values of salary: 0\n",
-      "The number of missing values of salary: 0\n",
-      "The number of missing values of salary: 0\n",
-      "The number of missing values of salary: 12024\n",
-      "The number of missing values of salary: 0\n",
+      "The number of missing values of satisfaction_level: 0\n",
+      "The number of missing values of last_evaluation: 0\n",
+      "The number of missing values of number_project: 0\n",
+      "The number of missing values of average_montly_hours: 368\n",
+      "The number of missing values of time_spend_company: 150\n",
+      "The number of missing values of work_accident: 0\n",
+      "The number of missing values of left: 0\n",
+      "The number of missing values of promotion_last_5years: 0\n",
+      "The number of missing values of is_smoker: 12024\n",
+      "The number of missing values of department: 0\n",
       "The number of missing values of salary: 0\n",
       "The total number of missing values for entire data: 12542\n"
      ]
@@ -861,7 +861,7 @@
     "# Count total missing values for each columns \n",
     "num_miss_values = []\n",
     "for col in df.columns:\n",
-    "    print(f'The number of missing values of {f}: {df[col].isna().sum()}')\n",
+    "    print(f'The number of missing values of {col}: {df[col].isna().sum()}')\n",
     "\n",
     "# Count total missing values for entire data\n",
     "print(f'The total number of missing values for entire data: {df.isna().sum().sum()}')"
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 172,
    "id": "85dc8050",
    "metadata": {},
    "outputs": [
@@ -1096,7 +1096,7 @@
        "9     low  "
       ]
      },
-     "execution_count": 393,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 173,
    "id": "3c61541c",
    "metadata": {},
    "outputs": [
@@ -1354,7 +1354,7 @@
        "[12259 rows x 10 columns]"
       ]
      },
-     "execution_count": 402,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 174,
    "id": "a5f466c6",
    "metadata": {},
    "outputs": [
@@ -1410,6 +1410,279 @@
     "    if pd.api.types.is_numeric_dtype(clean_data[col]): \n",
     "        print(f'{col}: {clean_data[col].isna().sum()}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5851e5a1",
+   "metadata": {},
+   "source": [
+    "Q10. Feature \"left\" has values 'yes' and 'no'.Convert those values into integer values, 1 and 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "id": "db0cbba5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>satisfaction_level</th>\n",
+       "      <th>last_evaluation</th>\n",
+       "      <th>number_project</th>\n",
+       "      <th>average_montly_hours</th>\n",
+       "      <th>time_spend_company</th>\n",
+       "      <th>work_accident</th>\n",
+       "      <th>left</th>\n",
+       "      <th>promotion_last_5years</th>\n",
+       "      <th>department</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.38</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>2</td>\n",
+       "      <td>157.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>sales</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>5</td>\n",
+       "      <td>262.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>sales</td>\n",
+       "      <td>medium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>7</td>\n",
+       "      <td>272.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>sales</td>\n",
+       "      <td>medium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>5</td>\n",
+       "      <td>223.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>sales</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.37</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>2</td>\n",
+       "      <td>200.511732</td>\n",
+       "      <td>3.380048</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>sales</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14968</th>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>2</td>\n",
+       "      <td>128.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>sales</td>\n",
+       "      <td>medium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14969</th>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>2</td>\n",
+       "      <td>157.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>sales</td>\n",
+       "      <td>medium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14990</th>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>5</td>\n",
+       "      <td>228.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>support</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14993</th>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>6</td>\n",
+       "      <td>293.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>support</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14995</th>\n",
+       "      <td>0.37</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>2</td>\n",
+       "      <td>160.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>support</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12259 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       satisfaction_level  last_evaluation  number_project  \\\n",
+       "0                    0.38             0.53               2   \n",
+       "1                    0.80             0.86               5   \n",
+       "2                    0.11             0.88               7   \n",
+       "3                    0.72             0.87               5   \n",
+       "4                    0.37             0.52               2   \n",
+       "...                   ...              ...             ...   \n",
+       "14968                0.40             0.47               2   \n",
+       "14969                0.43             0.46               2   \n",
+       "14990                0.89             0.88               5   \n",
+       "14993                0.76             0.83               6   \n",
+       "14995                0.37             0.48               2   \n",
+       "\n",
+       "       average_montly_hours  time_spend_company  work_accident  left  \\\n",
+       "0                157.000000            3.000000              0     1   \n",
+       "1                262.000000            6.000000              0     1   \n",
+       "2                272.000000            4.000000              0     1   \n",
+       "3                223.000000            5.000000              0     1   \n",
+       "4                200.511732            3.380048              0     1   \n",
+       "...                     ...                 ...            ...   ...   \n",
+       "14968            128.000000            3.000000              0     1   \n",
+       "14969            157.000000            3.000000              0     1   \n",
+       "14990            228.000000            5.000000              1     1   \n",
+       "14993            293.000000            6.000000              0     1   \n",
+       "14995            160.000000            3.000000              0     1   \n",
+       "\n",
+       "       promotion_last_5years department  salary  \n",
+       "0                          0      sales     low  \n",
+       "1                          0      sales  medium  \n",
+       "2                          0      sales  medium  \n",
+       "3                          0      sales     low  \n",
+       "4                          0      sales     low  \n",
+       "...                      ...        ...     ...  \n",
+       "14968                      0      sales  medium  \n",
+       "14969                      0      sales  medium  \n",
+       "14990                      0    support     low  \n",
+       "14993                      0    support     low  \n",
+       "14995                      0    support     low  \n",
+       "\n",
+       "[12259 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_data['left'] = clean_data['left'].map({'yes': 1, 'no': 0})\n",
+    "clean_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c55949e9",
+   "metadata": {},
+   "source": [
+    "Q11. Save the resulting data into a file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "08ff1a52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_data.to_csv('clean_data.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b40f550",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
